# lnkRUpdater

./: .env  Cargo.toml
src/: main.rs
static/: chat.html  main.js
