[package]
name = "axum-link-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"

serde_json = "1"
reqwest = { version = "0.13.1", features = ["json"] }
tracing-subscriber = "0.3"
dotenv = "0.15"          # для загрузки переменных окружения
anyhow = "1"